--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
     "db:push": "drizzle-kit push",
-    "seed:admins": "tsx script/seedAdmins.ts"
+    "seed:admins": "tsx script/seedAdmins.ts",
+    "seed:products": "tsx script/seedProducts.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
