--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "cmdk": "^1.1.1",
     "cross-env": "^10.1.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.6.1",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "^0.7.0",
-    "dotenv": "^16.6.1",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.0.1",
     "framer-motion": "^11.18.2",
@@ -84,6 +84,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "20.19.27",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@types/ws": "^8.5.13",
